# Omuse-POP-Model

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: pop-omuse.yml
.github/workflows/support_ci/: makefile_help  pyproject.toml  setup.py
data/: KMT_120_56.csv  KMT_240_110.csv  KMT_320_384.csv  KMT_360_168.csv  pop_in
examples/: TAMS_1deg.py  TAMS_X1.py
opsicl/: __init__.py  popsicl.py
popomo/: forcing_ERA5.py  popomo.py  poputils.py  utils.py
tamspop/: __init__.py  poputils.py  tamspop.py
tests/: poptest_in  test_opsicl.py  test_popomo.py  test_tamspop.py
utils/: getTopo.py  ncdiffpy.py
