[tool.poetry]
name = "opsicl"
version = "0.0.0"
description = "A driver for POP simulations through OMUSE."
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Lucas Esclapez <l.esclapez@esciencecenter.nl>"
]
packages = [{include = "opsicl"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
toml = ">=0.10.0"
oceansdb = "^0.8.14"
amuse-framework = ">=23.3.0"
#omuse-devel = { path = "./Submodules/omuse", develop = true }

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1"}
flake8 = "^4.0.1"
isort = "^5.9.3"

[tool.black]
line-length = 79
target-version = ['py39']
preview-string-processing = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
  # This is transitively imported by colcon-core.
  "ignore::DeprecationWarning",
]
