[tool.poetry]
name = "Tamspop"
version = "0.0.0"
description = "POP python TAMS model"
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Lucas Esclapez <l.esclapez@esciencecenter.nl>"
]
packages = [{include = "tamspop"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
toml = ">=0.10.0"
oceansdb = "^0.8.14"
amuse-framework = ">=23.3.0"
pyTAMS = { git = "https://github.com/nlesc-eTAOC/pyTAMS", branch = "main"}
omuse-devel = { path = "./Submodules/omuse", develop = true }

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1"}
flake8 = "^4.0.1"
isort = "^5.9.3"

[tool.black]
line-length = 79
target-version = ['py39']
preview-string-processing = true
exclude = 'Submodules|.venv|.github|amuse'

[tool.isort]
profile = "black"
skip = ["Submodules", "amuse", ".venv", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
  # This is transitively imported by colcon-core.
  "ignore::DeprecationWarning",
]
