[tool.poetry]
name = "popomo"
version = "0.0.0"
description = "POP Omuse MOdel"
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Lucas Esclapez <l.esclapez@esciencecenter.nl>"
]
packages = [{include = "popomo"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20.0"
toml = ">=0.10.0"
oceansdb = "^0.8.14"
amuse-framework = ">=23.3.0"
pyTAMS = { git = "https://github.com/nlesc-eTAOC/pyTAMS", branch = "main"}
omuse-devel = { path = "./Submodules/omuse", develop = true }

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1"}
flake8 = "^4.0.1"
isort = "^5.9.3"

[tool.black]
line-length = 79
target-version = ['py310']
preview-string-processing = true
exclude = 'Submodules|.venv|.github|amuse'

[tool.isort]
profile = "black"
skip = ["Submodules", "amuse", ".venv", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
  # This is transitively imported by colcon-core.
  "ignore::DeprecationWarning",
]

[tool.ruff.isort]
known-first-party = ["pytams"] 
force-single-line = true       
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]
